force-app/main/default/objects/Field_Technician__c/Field_Technician__c.object-meta.xml
<CustomObject>
    <label>Field Technician</label>
    <nameField>
        <label>Field Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>