force-app/main/default/objects/Field_Technician__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Handyman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>