force-app/main/default/objects/Field_Technician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Specialty__c</columns>
    <columns>Phone__c</columns>
    <columns>Rating__c</columns>
    <columns>Shift__c</columns>
    <columns>Years_of_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>